--- a/Imitation_Learning_Project.ipynb
+++ b/Imitation_Learning_Project.ipynb
@@ -2453,63 +2453,142 @@
         "#TODO : obtain a demonstration dataset from the previously trained agent\n",
         "from stable_baselines.gail import generate_expert_traj\n",
         "\n",
-        "generate_expert_traj(bc_trainer.policy, 'expert_pendulum', n_timesteps=60000, n_episodes=10)\n"
+        "def dummy_expert(_obs):\n",
+        "    \"\"\"\n",
+        "    Random agent. It samples actions randomly\n",
+        "    from the action space of the environment.\n",
+        "\n",
+        "    :param _obs: (np.ndarray) Current observation\n",
+        "    :return: (np.ndarray) action taken by the expert\n",
+        "    \"\"\"\n",
+        "    return env.action_space.sample()\n",
+        "# Data will be saved in a numpy archive named `expert_cartpole.npz`\n",
+        "# when using something different than an RL expert,\n",
+        "# you must pass the environment object explicitly\n",
+        "generate_expert_traj(dummy_expert, 'dummy_expert_HumanoidBullet', env, n_episodes=10)\n",
+        "\n",
+        "# generate_expert_traj(env.action_space.sample(), 'expert_pendulum', n_timesteps=60000, n_episodes=10)"
       ],
       "metadata": {
         "id": "93DDiTCACgWQ",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 806
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f51d4963-0a32-403d-fcbf-1b60b162f375"
+        "outputId": "4af7a8e4-5a41-42ab-d082-f386b8dc9cc0"
       },
-      "execution_count": 34,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
+          "name": "stdout",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-            "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-            "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-            "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-            "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-            "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-            "/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-            "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-            "/usr/local/lib/python3.7/dist-packages/stable_baselines/__init__.py:33: UserWarning: stable-baselines is in maintenance mode, please use [Stable-Baselines3 (SB3)](https://github.com/DLR-RM/stable-baselines3) for an up-to-date version. You can find a [migration guide](https://stable-baselines3.readthedocs.io/en/master/guide/migration.html) in SB3 documentation.\n",
-            "  \"stable-baselines is in maintenance mode, please use [Stable-Baselines3 (SB3)](https://github.com/DLR-RM/stable-baselines3) for an up-to-date version. You can find a [migration guide](https://stable-baselines3.readthedocs.io/en/master/guide/migration.html) in SB3 documentation.\"\n"
+            "actions (200, 17)\n",
+            "obs (200, 44)\n",
+            "rewards (200,)\n",
+            "episode_returns (10,)\n",
+            "episode_starts (200,)\n"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-34-311845234388>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#TODO : obtain a demonstration dataset from the previously trained agent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstable_baselines\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgail\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgenerate_expert_traj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgenerate_expert_traj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbc_trainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpolicy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'expert_pendulum'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_timesteps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m60000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_episodes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/stable_baselines/gail/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstable_baselines\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgail\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGAIL\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mstable_baselines\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgail\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mExpertDataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mstable_baselines\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgail\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecord_expert\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgenerate_expert_traj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/stable_baselines/gail/model.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstable_baselines\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrpo_mpi\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTRPO\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mGAIL\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTRPO\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \"\"\"\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/stable_baselines/trpo_mpi/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstable_baselines\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrpo_mpi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrpo_mpi\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTRPO\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/stable_baselines/trpo_mpi/trpo_mpi.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgym\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmpi4py\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMPI\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mpi4py'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'actions': array([[-0.8912799 ,  0.9307819 ,  0.2653819 , ...,  0.89409685,\n",
+              "          0.39855564, -0.09305939],\n",
+              "        [ 0.8055637 , -0.91821545,  0.84435356, ..., -0.3314372 ,\n",
+              "          0.03515413,  0.8076705 ],\n",
+              "        [-0.1817429 , -0.19668381,  0.8145447 , ...,  0.08923861,\n",
+              "          0.8317881 , -0.85856843],\n",
+              "        ...,\n",
+              "        [-0.51649433, -0.02345066, -0.31535813, ...,  0.34810796,\n",
+              "         -0.94059414,  0.8661762 ],\n",
+              "        [ 0.0777278 , -0.69321245,  0.6519793 , ..., -0.89770937,\n",
+              "         -0.14416108, -0.10143799],\n",
+              "        [-0.9929866 ,  0.5906719 ,  0.8910374 , ...,  0.67238665,\n",
+              "          0.99517167, -0.9667132 ]], dtype=float32),\n",
+              " 'episode_returns': array([-20.8172676 , -25.45505344, -27.0918051 , -30.10467222,\n",
+              "        -18.86873379, -25.23197547, -32.60149072, -29.91567821,\n",
+              "        -33.1014658 , -22.06610552]),\n",
+              " 'episode_starts': array([ True, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "         True, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False,  True, False, False, False, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False,  True, False, False, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False, False,  True, False, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False, False, False, False,  True, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False,  True,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False, False,  True, False, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False, False, False,  True, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False, False, False,  True, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False, False, False, False, False, False, False, False,\n",
+              "        False, False]),\n",
+              " 'obs': array([[ 5.9999996e-01, -1.3259577e-06,  1.0000000e+00, ...,\n",
+              "          0.0000000e+00,  0.0000000e+00,  0.0000000e+00],\n",
+              "        [ 5.9852552e-01, -1.7240444e-02,  9.9985135e-01, ...,\n",
+              "         -2.2061063e-01,  0.0000000e+00,  0.0000000e+00],\n",
+              "        [ 5.9347564e-01, -2.1656228e-02,  9.9976546e-01, ...,\n",
+              "          1.0939546e+00,  0.0000000e+00,  0.0000000e+00],\n",
+              "        ...,\n",
+              "        [ 6.9970965e-02, -2.8775170e-01,  9.5770502e-01, ...,\n",
+              "          3.0281405e+00,  0.0000000e+00,  1.0000000e+00],\n",
+              "        [ 3.3216350e-02, -2.8429663e-01,  9.5873636e-01, ...,\n",
+              "          4.1320095e+00,  0.0000000e+00,  1.0000000e+00],\n",
+              "        [-9.6362978e-03, -3.0744740e-01,  9.5156509e-01, ...,\n",
+              "         -2.8493270e-01,  0.0000000e+00,  1.0000000e+00]], dtype=float32),\n",
+              " 'rewards': array([-0.2727289 , -2.02617674, -0.67551769, -1.6327128 , -3.20912232,\n",
+              "         0.58803042, -3.09883515, -0.9363518 , -1.35163935, -1.13097625,\n",
+              "        -0.53648331, -0.77899856,  0.39924842, -0.56086906,  0.64548312,\n",
+              "        -0.62816559, -0.43460831, -5.17684372, -1.50662546, -0.83261277,\n",
+              "        -3.18872751, -1.44662591, -1.7619284 , -2.39194795, -0.78273426,\n",
+              "        -1.77422845, -0.05307326, -0.93330363, -1.05463234, -0.60442397,\n",
+              "        -0.86633198, -0.75416354, -0.64407754, -0.19499925, -1.1458526 ,\n",
+              "        -1.80462664, -0.49997744, -3.21416053, -1.39145728, -0.06773702,\n",
+              "        -0.94547225, -2.07507398, -0.18010722, -2.75248043, -1.91111806,\n",
+              "        -0.43077524, -0.89707905, -1.31197492, -0.83321689, -1.21130237,\n",
+              "        -1.23767051, -1.63459173, -0.64122156, -0.92411201, -0.91823243,\n",
+              "        -2.11103979, -5.61714233, -0.85272492, -1.53430722, -0.69183717,\n",
+              "        -1.33751603, -1.73356129, -4.2620802 , -0.83251173, -2.91773012,\n",
+              "        -1.9432106 , -2.10982636, -0.18290332, -2.24729132,  0.59021196,\n",
+              "         0.03505348, -1.34848582, -0.74122239, -1.12471948, -0.57318616,\n",
+              "        -6.29682354,  0.24293052, -1.44453682, -0.11542558, -0.8637685 ,\n",
+              "        -0.29329617, -0.70280792, -0.34970066, -2.48016931, -2.17462247,\n",
+              "        -1.35349111,  0.09433076,  0.15389554, -2.68234595, -1.3740099 ,\n",
+              "        -1.26402994, -0.34574481,  0.20728221,  0.24550141, -0.22453265,\n",
+              "        -4.14419246, -0.23845501, -4.16989606, -2.19638568, -0.47164179,\n",
+              "        -2.55955539, -0.37523661, -1.08731358, -0.58141298, -0.57550525,\n",
+              "         0.22060917,  0.1920135 , -1.32445402, -0.67180325, -0.29450299,\n",
+              "        -0.73217205, -1.78831796, -1.48202702, -0.98732676, -2.02316004,\n",
+              "        -4.08543169,  0.30668857, -0.3323267 , -1.82749489, -0.84694388,\n",
+              "        -1.42908209, -0.56546985, -0.45534279,  0.24904439, -2.88303267,\n",
+              "        -3.32090235, -3.43482897, -2.50473851, -2.50594136, -1.9726552 ,\n",
+              "        -1.53586384, -1.2161013 , -1.28860026, -1.24265311,  0.1299287 ,\n",
+              "        -1.29482527, -1.2203078 ,  0.47145207, -3.8814936 , -0.48836576,\n",
+              "        -1.06844175, -2.31567544, -1.91577102, -0.37201212, -0.58906703,\n",
+              "        -0.81310892, -0.19088861, -1.13829677, -0.43150511, -0.16486984,\n",
+              "        -0.45980792, -4.36687027, -0.97313851, -1.3005781 , -4.7734693 ,\n",
+              "        -0.88541754, -2.27751272, -5.39088147, -2.20041165, -0.84147454,\n",
+              "        -1.36226001, -1.04927022, -4.43493322, -3.0574774 , -0.8732558 ,\n",
+              "        -4.33156291, -0.94620855, -2.22240597, -1.41368067, -1.93335691,\n",
+              "        -0.92890585, -0.63776348, -0.28468266,  0.69277632, -0.46922852,\n",
+              "        -6.80736377, -0.11522421, -0.29793323, -0.53913744, -0.79296224,\n",
+              "        -2.07385794, -0.77707181, -0.69636411, -0.38982393, -0.6423481 ,\n",
+              "        -0.49830185, -1.65845656,  0.02299718, -0.60226458, -1.70284109,\n",
+              "        -0.11905281,  1.01877476,  0.6742279 ,  0.17756364,  0.50103826,\n",
+              "        -1.58310541, -2.61697285, -1.96839159, -1.19400752, -6.19258999])}"
             ]
-          }
+          },
+          "metadata": {},
+          "execution_count": 41
         }
       ]
     },
